fjord-compiler/test/errors/Wasteful.fj
module errors.Wasteful

wasteful : Int -* Int -* Int
wasteful a b =
  a
